// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./docs/.vuepress/components/demo/radio/basic.vue correctly 1`] = `
<div class="nova-radio">
  <div tabindex="0" class="nova-radio-input"></div>
  <div class="nova-radio-label">Radio</div>
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/radio/disabled.vue correctly 1`] = `
<section>
  <div class="nova-radio is-disabled">
    <div tabindex="-1" class="nova-radio-input"></div>
    <div class="nova-radio-label">Disabled</div>
  </div> <br>
  <div class="nova-radio is-checked is-disabled">
    <div tabindex="-1" class="nova-radio-input"></div>
    <div class="nova-radio-label">Disabled</div>
  </div> <br> <button type="button" class="nova-button nova-button-default"><span>Toggle Disabled</span></button>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/radio/group.vue correctly 1`] = `
<div class="nova-radio-group">
  <div class="nova-radio is-checked">
    <div tabindex="0" class="nova-radio-input"></div>
    <div class="nova-radio-label">Apple</div>
  </div>
  <div class="nova-radio">
    <div tabindex="0" class="nova-radio-input"></div>
    <div class="nova-radio-label">Peach</div>
  </div>
  <div class="nova-radio">
    <div tabindex="0" class="nova-radio-input"></div>
    <div class="nova-radio-label">Orange</div>
  </div>
  <div class="nova-radio">
    <div tabindex="0" class="nova-radio-input"></div>
    <div class="nova-radio-label">Cherry</div>
  </div>
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/radio/group-more.vue correctly 1`] = `
<div class="group-more nova-radio-group">
  <div class="nova-radio is-checked">
    <div tabindex="0" class="nova-radio-input"></div>
    <div class="nova-radio-label">Apple</div>
  </div>
  <div class="nova-radio">
    <div tabindex="0" class="nova-radio-input"></div>
    <div class="nova-radio-label">Peach</div>
  </div>
  <div class="nova-radio">
    <div tabindex="0" class="nova-radio-input"></div>
    <div class="nova-radio-label">Orange</div>
  </div>
  <div class="nova-radio">
    <div tabindex="0" class="nova-radio-input"></div>
    <div class="nova-radio-label">
      More...
      <input type="text" class="more-input nova-input" style="display: none;"></div>
  </div>
</div>
`;
